--- a/blogspot.html
+++ b/blogspot.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            <h1>aqui esta la cabecera</h1>
+        </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blogpost</h1>
             <p>Este es el parrafo inicial y aqui vamos a escribir cosas increibles</p>
