--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            <h1>aqui esta la cabecera</h1>
+            HyperBlog
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blogpost</h1>
