agregado contenido y cambio de tipografia para la pagina web

--- a/blogspot.html
+++ b/blogspot.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Aqui vamos a hacer un blogpost</h1>
             <p>Este es el parrafo inicial y aqui vamos a escribir cosas increibles</p>
+            <p>Los blogs son la clave para compartir ideas al mundo y dar a conocer un punto de vista que tiene un usuario sobre un tema en especifico</p>
         </div>
         
     </div>    
