agregado nombre de master, un parrafo y cambio de color a azul

--- a/blogspot.html
+++ b/blogspot.html
@@ -11,12 +11,13 @@
     <div id="container">
         <div id="cabecera">
             HyperBlog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog de master</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blogpost</h1>
             <p>Este es el parrafo inicial y aqui vamos a escribir cosas increibles</p>
             <p>Los blogs son la clave para compartir ideas al mundo y dar a conocer un punto de vista que tiene un usuario sobre un tema en especifico</p>
+            <p>Nuevo parrafo para escribir</p>
         </div>
         
     </div>    
