Agregado detalles de la cabecera

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,8 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            HyperBlog
-            <span id="tagline">Tu blog de cabecera</span>
+            HyperBlog 2.0
+            <span id="tagline">El blog con cabecera creado en un branch</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blogpost</h1>
