Agregado el footer de la pagina

--- a/blogspot.html
+++ b/blogspot.html
@@ -19,5 +19,8 @@
         </div>
         
     </div>    
+    <div id="footer">
+        <p>Aqui va el footer :3 </p>
+    </div>
 </body>
 </html>
